@@ -1,3 +1,8 @@
+2004-02-09  Bernardo Innocenti  <bernie@develer.com>
+
+	* crossconfig.m4: Don't enable _GLIBCXX_USE_LFS on *-uclinux*.
+	* configure: Regenerate.
+
 2004-02-08  Richard Henderson  <rth@redhat.com>
 
 	PR libstdc++/14026
